--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -132,6 +132,7 @@
         <Content Include="Global.asax"/>
         <Content Include="Content\Site.css"/>
         <Content Include="index.html" />
+        <Content Include="script.js" />
         <Content Include="Scripts\bootstrap.js"/>
         <Content Include="Scripts\bootstrap.min.js"/>
         <None Include="Scripts\jquery-3.3.1.intellisense.js"/>
@@ -145,6 +146,7 @@
         <Content Include="Scripts\jquery.validate.unobtrusive.js"/>
         <Content Include="Scripts\jquery.validate.unobtrusive.min.js"/>
         <Content Include="Scripts\modernizr-2.8.3.js"/>
+        <Content Include="Scripts\script.js" />
         <Content Include="server.js" />
         <Content Include="Web.config"/>
         <Content Include="Web.Debug.config">
