--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -129,6 +129,7 @@
         <Content Include="Content\bootstrap.min.css"/>
         <Content Include="favicon.ico"/>
         <Content Include="fonts\glyphicons-halflings-regular.svg"/>
+        <Content Include="generate_questions.html" />
         <Content Include="Global.asax"/>
         <Content Include="Content\Site.css"/>
         <Content Include="index.html" />
