--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -133,6 +133,7 @@
         <Content Include="Global.asax"/>
         <Content Include="Content\Site.css"/>
         <Content Include="index.html" />
+        <Content Include="public\points.html" />
         <Content Include="Scripts\bootstrap.js"/>
         <Content Include="Scripts\bootstrap.min.js"/>
         <None Include="Scripts\jquery-3.3.1.intellisense.js"/>
@@ -166,6 +167,7 @@
     <ItemGroup>
         <Folder Include="App_Data"/>
         <Folder Include="Models"/>
+        <Folder Include="server\" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="fonts\glyphicons-halflings-regular.woff2"/>
