--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -129,26 +129,27 @@
         <Content Include="Content\bootstrap.min.css"/>
         <Content Include="favicon.ico"/>
         <Content Include="fonts\glyphicons-halflings-regular.svg"/>
-        <Content Include="generate_questions.html" />
         <Content Include="Global.asax"/>
         <Content Include="Content\Site.css"/>
-        <Content Include="index.html" />
-        <Content Include="public\points.html" />
-        <Content Include="Scripts\bootstrap.js"/>
-        <Content Include="Scripts\bootstrap.min.js"/>
-        <None Include="Scripts\jquery-3.3.1.intellisense.js"/>
-        <Content Include="Scripts\jquery-3.3.1.js"/>
-        <Content Include="Scripts\jquery-3.3.1.min.js"/>
-        <Content Include="Scripts\jquery-3.3.1.slim.js"/>
-        <Content Include="Scripts\jquery-3.3.1.slim.min.js"/>
-        <None Include="Scripts\jquery.validate-vsdoc.js"/>
-        <Content Include="Scripts\jquery.validate.js"/>
-        <Content Include="Scripts\jquery.validate.min.js"/>
-        <Content Include="Scripts\jquery.validate.unobtrusive.js"/>
-        <Content Include="Scripts\jquery.validate.unobtrusive.min.js"/>
-        <Content Include="Scripts\modernizr-2.8.3.js"/>
-        <Content Include="Scripts\script.js" />
-        <Content Include="server.js" />
+        <Content Include="public\generate_questions.html"/>
+        <Content Include="public\index.html"/>
+        <Content Include="public\points.html"/>
+        <Content Include="public\Scripts\bootstrap.js"/>
+        <Content Include="public\Scripts\bootstrap.min.js"/>
+        <Content Include="public\Scripts\dalle.js"/>
+        <Content Include="public\Scripts\jquery-3.3.1.js"/>
+        <Content Include="public\Scripts\jquery-3.3.1.min.js"/>
+        <Content Include="public\Scripts\jquery-3.3.1.min.map"/>
+        <Content Include="public\Scripts\jquery-3.3.1.slim.js"/>
+        <Content Include="public\Scripts\jquery-3.3.1.slim.min.js"/>
+        <Content Include="public\Scripts\jquery-3.3.1.slim.min.map"/>
+        <Content Include="public\Scripts\jquery.validate.js"/>
+        <Content Include="public\Scripts\jquery.validate.min.js"/>
+        <Content Include="public\Scripts\jquery.validate.unobtrusive.js"/>
+        <Content Include="public\Scripts\jquery.validate.unobtrusive.min.js"/>
+        <Content Include="public\Scripts\modernizr-2.8.3.js"/>
+        <Content Include="public\Scripts\script.js"/>
+        <Content Include="server\server.js"/>
         <Content Include="Web.config"/>
         <Content Include="Web.Debug.config">
             <DependentUpon>Web.config</DependentUpon>
@@ -167,7 +168,6 @@
     <ItemGroup>
         <Folder Include="App_Data"/>
         <Folder Include="Models"/>
-        <Folder Include="server\" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="fonts\glyphicons-halflings-regular.woff2"/>
@@ -179,8 +179,8 @@
         <Content Include="Content\bootstrap-theme.min.css.map"/>
         <Content Include="Content\bootstrap-theme.css.map"/>
         <None Include="packages.config"/>
-        <Content Include="Scripts\jquery-3.3.1.slim.min.map"/>
-        <Content Include="Scripts\jquery-3.3.1.min.map"/>
+        <None Include="public\Scripts\jquery-3.3.1.intellisense.js"/>
+        <None Include="public\Scripts\jquery.validate-vsdoc.js"/>
     </ItemGroup>
     <PropertyGroup>
         <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
