--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -136,6 +136,7 @@
         <Content Include="public\css\chatbot.css" />
         <Content Include="public\css\styles3.css" />
         <Content Include="public\css\styles.css" />
+        <Content Include="public\css\stylesprm.css" />
         <Content Include="public\generate_questions.html"/>
         <Content Include="public\images\Don.jpg" />
         <Content Include="public\images\Mazda.jpg" />
